<resources>
    <string name="app_name">PMFightAcademy</string>
    <string name="preference_login_key">login_pref</string>
    <string name="btn_retry">Retry</string>
    <string name="title_show_more">Show more</string>

    <!-- Coach -->
    <string name="title_coaches">Coaches</string>
    <string name="text_coach_age">%d years old</string>

    <!-- Activity -->
    <string name="activity_price">%d UAH</string>
    <string name="planned_activities_title">Planned Activities</string>
    <string name="book_new_activity_title">Book new activity</string>
    <string name="planned_activity_coach_string">Coach</string>
    <string name="planned_activity_price_string">Price</string>
    <string name="activities_history_title">History</string>
    <string name="button_log_out_text">Log out</string>

    <!-- Bottom Navigation -->
    <string name="info_bottom_label">Info</string>
    <string name="coaches_bottom_label">Coaches</string>
    <string name="activities_bottom_label">Activities</string>
    <string name="history_bottom_label">History</string>
    <string name="settings_bottom_label">Settings</string>

    <!-- Booking -->
    <string name="title_booking">Booking</string>
    <string name="title_choose_service">Choose training</string>
    <string name="title_choose_coach">Choose coach</string>
    <string name="title_choose_date">Choose date</string>
    <string name="title_choose_time">Choose time</string>
    <string name="btn_done">Done</string>

    <!-- Services -->
    <string name="service_price">Price: %d UAH</string>
    <string name="service_duration">Duration: 1 hour</string>

    <!-- Info -->
    <string name="title_info_screen">About Fight Academy</string>

    <!-- Activities -->
    <string name="title_planned_activities">Planned Activities</string>
    <string name="title_book_new_activity">Book new activity</string>
    <string name="title_coach">Coach</string>
    <string name="title_price">Price</string>
    <string name="title_activities_history">History</string>

    <!--Auth-->
    <string name="no_account_string">Don\'t have an account?</string>
    <string name="btnCreateAccount">Create an account</string>
    <string name="btn_login">Log in</string>
    <string name="etPassword">Password</string>
    <string name="etPhoneNumber">Phone number</string>
    <string name="passwordInvalid">Entered password is invalid</string>
    <string name="phoneInvalid">Entered phone is invalid</string>
    <string name="phoneAndPasswordInvalid">Entered phone and password are invalid</string>
    <string name="etName">Name</string>

    <!--TOAST-->
    <string name="registrationFragment">pass.isNullOrEmpty() || phone.isNullOrEmpty()</string>
    <string name="registrationFragmentLoginCheck">Please provide correct number</string>
    <string name="registrationFragmentPasswordCheck">Please provide correct password</string>
    <string name="registrationFragmentNameChack">Please provide correct name</string>
    <string name="register_button_text">Done</string>
    <string name="phone_prefix">+380</string>
</resources>
