<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/info_fragment"
        android:icon="@drawable/info_icon"
        android:title="@string/info_bottom_label" />
    <item
        android:id="@+id/coaches_fragment"
        android:icon="@drawable/coaches_icon"
        android:title="@string/coaches_bottom_label" />
    <item
        android:id="@+id/activities_fragment"
        android:icon="@drawable/activities_icon"
        android:title="@string/activities_bottom_label" />
    <item
        android:id="@+id/history_fragment"
        android:icon="@drawable/history_icon"
        android:title="@string/history_bottom_label" />
    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings_bottom_label" />
</menu>