<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/title_booking" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/cardService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/booking_card_background"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivService"
                    android:layout_width="@dimen/booking_icon_size"
                    android:layout_height="@dimen/booking_icon_size"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle"
                    app:srcCompat="@drawable/ic_service" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:drawablePadding="@dimen/spacing_small"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.App.Title"
                    app:drawableEndCompat="@drawable/ic_forward"
                    app:drawableTint="@color/white"
                    tools:text="@string/title_choose_service" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardCoach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/booking_card_background"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardService">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivAvatarCoach"
                    android:layout_width="@dimen/booking_icon_size"
                    android:layout_height="@dimen/booking_icon_size"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle"
                    app:srcCompat="@drawable/ic_coach" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCoach"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:drawablePadding="@dimen/spacing_small"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.App.Title"
                    app:drawableEndCompat="@drawable/ic_forward"
                    app:drawableTint="@color/white"
                    tools:text="@string/title_choose_coach" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/title_choose_date"
                android:textAppearance="@style/TextAppearance.App.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCoach" />

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_xlarge"
                android:background="@drawable/booking_card_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDate"
                app:mcv_dateTextAppearance="@style/TextAppearance.App.CalendarDayText"
                app:mcv_headerTextAppearance="@color/white"
                app:mcv_selectionColor="@color/yellow_primary"
                app:mcv_showOtherDates="all"
                app:mcv_titleAnimationOrientation="horizontal"
                app:mcv_weekDayTextAppearance="@color/white" />

            <krasnikov.project.pmfightacademy.view.LoadingErrorView
                android:id="@+id/stateCalendar"
                style="@style/Widget.MyApp.LoadingErrorView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/calendar"
                app:layout_constraintEnd_toEndOf="@id/calendar"
                app:layout_constraintStart_toStartOf="@id/calendar"
                app:layout_constraintTop_toTopOf="@id/calendar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/title_choose_time"
                android:textAppearance="@style/TextAppearance.App.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/timeSlots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:chipSpacing="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="@dimen/booking_time_slots_min_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelTime"
                app:singleSelection="true" />

            <krasnikov.project.pmfightacademy.view.LoadingErrorView
                android:id="@+id/stateTimeSlots"
                style="@style/Widget.MyApp.LoadingErrorView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/timeSlots"
                app:layout_constraintEnd_toEndOf="@id/timeSlots"
                app:layout_constraintStart_toStartOf="@id/timeSlots"
                app:layout_constraintTop_toTopOf="@id/timeSlots" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToBook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeSlots"
                app:layout_constraintVertical_bias="1" />

            <krasnikov.project.pmfightacademy.view.LoadingErrorView
                android:id="@+id/stateBooking"
                style="@style/Widget.MyApp.LoadingErrorView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
